...
    static var previews: some View {
        Group {
            // Loading state
            ContentStateView(
                state: ContentState<[String]>.loading,
                content: { items in
                    List(items, id: \.self) { item in
                        Text(item)
                    }
                },
                emptyContent: {
                    EmptyStateView.noPhotos()
                }
...
